# danji

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  README.en.md  README.md  circuit.json
danji-cli/: Cargo.toml
danji-ctrl/: Cargo.toml
danji-realtime/: Cargo.toml  PROTOCOL.md
devlog/: 2026-06-24-diode-tone-psu.md  2026-06-24-fixes-and-two-stage.md  2026-06-24-full-chain-psu.md  2026-06-24-initial-implementation.md  2026-06-24-output-transformer.md  2026-06-24-pentode-v2.md  2026-06-24-pentode.md  2026-06-25-music-test-params.md  2026-06-25-pentode-v2.md  2026-06-25-push-pull-debug.md  2026-06-25-push-pull-dual-sim.md  2026-06-25-push-pull-optimize.md  2026-06-25-push-pull-wip.md  2026-06-25-solver-pivot-divergence.md  2026-06-26-danji-realtime.md  2026-06-26-git-history-align.md  2026-06-26-git-history-cleanup.md  2026-06-26-input-gain-output-atten.md  2026-06-26-max-iter-100.md  2026-06-26-newton-line-search.md  2026-06-26-readme-circuit-diagrams.md  2026-06-26-relax-tol.md  2026-06-26-workspace-restructure.md  2026-06-27-cleanup-unused-deps.md  2026-06-27-doc-comments.md  2026-06-27-doc-format.md  2026-06-27-doc-improvement.md  2026-06-27-output-device-bugfix.md  2026-06-27-output-device-monitor-test.md  2026-06-27-output-device-switch.md  2026-06-28-capacitor-vprev-cleanup.md  2026-06-28-dead-code-cleanup.md
examples/: benchmark.rs  check_el84.rs  full_chain.rs  output_transformer.rs  pentode_stage.rs  plot_curves.rs  power_supply.rs  psu_clc.rs  push_pull.rs  single_tube.rs  sr_bench.rs  tone_control.rs  two_stage.rs
src/: api.rs  error.rs  lib.rs  simulator.rs
test/: 2026-06-25_001_report.typ  AGENTS.md  (+4 more)
(+22 files in other folders)
