[workspace]
members = ["danji-cli", "danji-realtime", "danji-ctrl"]

[workspace.dependencies]
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
hound = "3"

[package]
name = "danji"
version = "0.1.0"
edition = "2021"
description = "Physical modeling vacuum tube amplifier simulation library"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["audio", "dsp", "vacuum-tube", "amplifier", "simulation"]
categories = ["multimedia::audio", "science::physics"]

[dependencies]
log = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }

[profile.release]
opt-level = 3
lto = true
